sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:13: error: not found: value E
	while(E == true)
              ^