sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	
	do {
		for(i <- 0 to getNombreValeurs - 2) {
			var E:Boolean = false
			if(plusPetit(i + 1 , i)){
				echange(i, i + 1)
				E = true
			}
		}
	}
	while(E == true)
}
